# auto-infographics

./: .gitignore  COMMIT.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: README-ru.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Canvas/: Canvas.module.css  Canvas.tsx  ZoomIndicator.module.css  ZoomIndicator.tsx
frontend/src/components/Editor/: Editor.module.css  Editor.tsx
frontend/src/components/GalleryOverlay/: GalleryOverlay.module.css  GalleryOverlay.tsx
frontend/src/components/GalleryTab/: GalleryTab.module.css  GalleryTab.tsx
frontend/src/components/GalleryView/: GalleryView.module.css  GalleryView.tsx  ImageThumbnail.module.css  ImageThumbnail.tsx
frontend/src/components/LayersPanel/: LayersPanel.module.css  LayersPanel.tsx
frontend/src/components/PropertiesPanel/: PropertiesPanel.module.css  PropertiesPanel.tsx
frontend/src/components/StartupWindow/: StartupWindow.module.css  StartupWindow.tsx
frontend/src/components/TabBar/: TabBar.module.css  TabBar.tsx
frontend/src/components/TableTab/: BulkFillDialog.module.css  BulkFillDialog.tsx  TableTab.module.css  (+1 more)
frontend/src/hooks/: useKeyboardShortcuts.ts  useSystemFonts.ts
frontend/src/store/: editorStore.ts
frontend/src/types/: canvas.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: fonts.toml  generate.toml  list-images.toml  templates.toml
src-tauri/src/: lib.rs  main.rs
(+6 files in other folders)
