[package]
name = "infographics"
version = "0.2.0"
edition = "2021"

[lib]
name = "infographics_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
backend = { path = "../backend" }
font-kit = "0.14"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
tokio = { version = "1", features = ["time", "rt"] }
futures = "0.3"
num_cpus = "1.16"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
